add_library( opgen-k_divdiv

   P2VectorElementwiseKDivdiv.cpp
   P2VectorElementwiseKDivdiv.hpp
   P2VectorElementwiseKDivdivAnnulusMap.cpp
   P2VectorElementwiseKDivdivAnnulusMap.hpp
   P2VectorElementwiseKDivdivIcosahedralShellMap.cpp
   P2VectorElementwiseKDivdivIcosahedralShellMap.hpp
   P2VectorElementwiseKDivdivParametricP2Map.cpp
   P2VectorElementwiseKDivdivParametricP2Map.hpp
)
target_link_libraries( opgen-k_divdiv PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-k_divdiv PRIVATE

      avx/P2VectorElementwiseKDivdivAnnulusMap_applyScaled_P2VectorElementwiseKDivdivAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseKDivdivAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseKDivdivIcosahedralShellMap_applyScaled_P2VectorElementwiseKDivdivIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseKDivdivIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseKDivdivParametricP2Map_applyScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseKDivdivParametricP2Map_applyScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseKDivdivParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseKDivdivParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseKDivdiv_applyScaled_P2VectorElementwiseKDivdiv_macro_2D.cpp
      avx/P2VectorElementwiseKDivdiv_applyScaled_P2VectorElementwiseKDivdiv_macro_3D.cpp
      avx/P2VectorElementwiseKDivdiv_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdiv_macro_2D.cpp
      avx/P2VectorElementwiseKDivdiv_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdiv_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdivAnnulusMap_toMatrixScaled_P2VectorElementwiseKDivdivAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdivIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseKDivdivIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdivParametricP2Map_toMatrixScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdivParametricP2Map_toMatrixScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdiv_toMatrixScaled_P2VectorElementwiseKDivdiv_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdiv_toMatrixScaled_P2VectorElementwiseKDivdiv_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2VectorElementwiseKDivdivAnnulusMap_applyScaled_P2VectorElementwiseKDivdivAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseKDivdivAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseKDivdivIcosahedralShellMap_applyScaled_P2VectorElementwiseKDivdivIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseKDivdivIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseKDivdivParametricP2Map_applyScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseKDivdivParametricP2Map_applyScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseKDivdivParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_2D.cpp
      avx/P2VectorElementwiseKDivdivParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_3D.cpp
      avx/P2VectorElementwiseKDivdiv_applyScaled_P2VectorElementwiseKDivdiv_macro_2D.cpp
      avx/P2VectorElementwiseKDivdiv_applyScaled_P2VectorElementwiseKDivdiv_macro_3D.cpp
      avx/P2VectorElementwiseKDivdiv_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdiv_macro_2D.cpp
      avx/P2VectorElementwiseKDivdiv_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdiv_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-k_divdiv PRIVATE

      noarch/P2VectorElementwiseKDivdivAnnulusMap_applyScaled_P2VectorElementwiseKDivdivAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdivAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdivAnnulusMap_toMatrixScaled_P2VectorElementwiseKDivdivAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdivIcosahedralShellMap_applyScaled_P2VectorElementwiseKDivdivIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdivIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdivIcosahedralShellMap_toMatrixScaled_P2VectorElementwiseKDivdivIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdivParametricP2Map_applyScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdivParametricP2Map_applyScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdivParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdivParametricP2Map_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdivParametricP2Map_toMatrixScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdivParametricP2Map_toMatrixScaled_P2VectorElementwiseKDivdivParametricP2Map_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdiv_applyScaled_P2VectorElementwiseKDivdiv_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdiv_applyScaled_P2VectorElementwiseKDivdiv_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdiv_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdiv_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdiv_computeInverseDiagonalOperatorValuesScaled_P2VectorElementwiseKDivdiv_macro_3D.cpp
      noarch/P2VectorElementwiseKDivdiv_toMatrixScaled_P2VectorElementwiseKDivdiv_macro_2D.cpp
      noarch/P2VectorElementwiseKDivdiv_toMatrixScaled_P2VectorElementwiseKDivdiv_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-k_divdiv PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-k_divdiv PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-k_divdiv PUBLIC cxx_std_17)
endif ()
